--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,5 @@
   --color-sslate-500: hsl(200, 26%, 54%);
   --color-sslate-700: hsl(200, 24%, 40%);
   --color-sslate-900: hsl(202, 55%, 16%);
+  --color-sslate-950: hsl(202, 55%, 11%);
 }
